package dispositivos.musicPlayer;

public interface ReproutorMusical {

    public void selecionarMusica();
    public void tocar();
    public void pausar();
}
