package dispositivos.navegador;

public interface NavegadorInternet {

    public void exibirPaginas();
    public void adicionarNovaAba();
    public void atualizarPagina();
}
